--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div><h2>Quem somos</h2></div>
             <div class="texto"><p>A Game Store é uma loja de jogos que está no mercado desde 2000 trazendo os melhores jogos para as mais diversas plataformas.
             São milhares de jogos pra você conferir e incluem jogos de todas as gerações Xbox, PlayStation e consoles Nintendo. Venha conferir.
-            A GameStore está sempre atualizada para trazer o melhor dos jogos até você!</p>
+            <span>A GameStore está sempre atualizada para trazer o melhor dos jogos até você!</span></p>
         </div>
     </div>
     <div class="conteudo2">
